[package]
name = "frame-graph"
version = "0.1.0"
edition = "2024"
description = "thin frame-graph"
license = "MIT OR Apache-2.0"
readme = "README.md"    
repository = "https://github.com/olejaaaaaaaa/frame-graph"
keywords = ["frame-graph", "vulkan", "rendering"]
categories = ["graphics"]

[features]
default = []

[dependencies]
log = { version = "0.4", default-features = false }
thiserror = { version = "2.0", default-features = false }
ash = "0.38.0"
gpu-allocator = { version = "0.28.0", features = ["vulkan"] }
slotmap = "1.1.1"